cli/resource/monitoring/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: monitoring
spec:
  selector:
    app: pushgateway
  type: NodePort
  ports:
    - port: 9091
      targetPort: 9091
      nodePort: 30091
