cli/resource/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.local
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          - path: /monitor-gateway
            pathType: Prefix
            backend:
              service:
                name: monitor-gateway-service
                port:
                  number: 9091
          - path: /monitor-gateway
            pathType: Prefix
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
